--- a/app/views/product.scala.html
+++ b/app/views/product.scala.html
@@ -46,6 +46,9 @@
                         <a href="@routes.ShoppingController.addToBasket(product.getProductId)">
                         <button class="pull-right" id="product-add-to-cart">Add To Cart <i class="fa fa-shopping-basket" aria-hidden="true"></i></button>
                         </a>
+                        <a href="@routes.WishlistCtrl.addToWishlist(product.getProductId)">
+                            <button class="pull-right" id="product-add-to-cart">Wishlist <i class="fa fa-heart-o" aria-hidden="true"></i></button>
+                        </a>
                     </div>
                     <!--end of col -->
                 </div>
