--- a/public/stylesheets/stylesheet.css
+++ b/public/stylesheets/stylesheet.css
@@ -620,8 +620,10 @@ body {
     /*border-bottom: solid 2px #46349b;*/
 }
 
-/*#border-temp{
+/*#test-line{
     border-bottom: solid 2px #46349b;
+    margin-top: 5%;
+    padding-top: 1em;
 }*/
 
 #wishlist-details h1{
